# snaps

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  abyss-snaps  deploy.sh  publish.py  template.json
ci/: deploy.py  gen_readme.py  pyproject.toml
src/: args.rs  boot.rs  cli.rs  config.rs  constants.rs  context.rs  core.rs  fstab.rs  main.rs  outcome.rs  recipe.rs  snapshot.rs  status.rs
src/outcome/: error.rs  message.rs  mod.rs  result.rs
