[package]
name = "abyss-snaps"
version = "26.7.20"
edition = "2024"

[dependencies]
btrfs-uapi = "0.13.0"
clap = { version = "4.6.1", features = ["derive"] }
crc32fast = "1.5.0"
nix = { version = "0.31.3", features = ["user", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
